pref: 优化GUI更新功能；项目分为gui和upgrade两个模块