@@ -6,8 +6,9 @@
 
     <groupId>cn.octopusyan</groupId>
     <artifactId>alist-gui</artifactId>
-    <version>1.0.2</version>
+    <version>1.0.1</version>
     <name>alist-gui</name>
+    <packaging>pom</packaging>
 
     <organization>
         <name>octopus_yan</name>
@@ -17,6 +18,11 @@
     <inceptionYear>2024</inceptionYear>
     <description>AList GUI</description>
 
+    <modules>
+        <module>upgrade</module>
+        <module>gui</module>
+    </modules>
+
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
@@ -24,9 +30,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-        <exec.mainClass>cn.octopusyan.alistgui.AppLauncher</exec.mainClass>
-        <cssSrcPath>${project.basedir}/src/main/resources/css</cssSrcPath>
-        <cssTargetPath>${project.basedir}/target/classes/css</cssTargetPath>
+        <project.version>1.0.1</project.version>
 
         <junit.version>5.10.0</junit.version>
         <javafx.version>21.0.4</javafx.version>
@@ -42,261 +46,99 @@
         <gluonhq-emoji.version>1.0.1</gluonhq-emoji.version>
     </properties>
 
-    <dependencies>
-        <!-- javafx -->
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-controls</artifactId>
-            <version>${javafx.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-fxml</artifactId>
-            <version>${javafx.version}</version>
-        </dependency>
+    <dependencyManagement>
 
-        <!-- https://mkpaz.github.io/atlantafx/ -->
-        <dependency>
-            <groupId>io.github.mkpaz</groupId>
-            <artifactId>atlantafx-base</artifactId>
-            <version>2.0.1</version>
-        </dependency>
+        <dependencies>
 
-        <!-- slf4j -->
-        <!-- https://slf4j.org/manual.html -->
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>${slf4j.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-classic</artifactId>
-            <version>${logback.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-core</artifactId>
-            <version>${logback.version}</version>
-        </dependency>
-
-        <!-- common -->
-        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>${common-lang3.version}</version>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-exec -->
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-exec</artifactId>
-            <version>${common-exec.version}</version>
-        </dependency>
-
-        <!-- hutool -->
-        <dependency>
-            <groupId>cn.hutool</groupId>
-            <artifactId>hutool-core</artifactId>
-            <version>${hutool.version}</version>
-        </dependency>
-
-        <!-- lombok -->
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>${lombok.version}</version>
-        </dependency>
-
-        <!-- jackson -->
-        <dependency>
-            <groupId>com.fasterxml.jackson.dataformat</groupId>
-            <artifactId>jackson-dataformat-yaml</artifactId>
-            <version>${jackson.version}</version>
-        </dependency>
-
-        <!-- https://kordamp.org/ikonli/ -->
-        <dependency>
-            <groupId>org.kordamp.ikonli</groupId>
-            <artifactId>ikonli-javafx</artifactId>
-            <version>${ikonli.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.kordamp.ikonli</groupId>
-            <artifactId>ikonli-fontawesome-pack</artifactId>
-            <version>${ikonli.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.gluonhq</groupId>
-            <artifactId>emoji</artifactId>
-            <version>${gluonhq-emoji.version}</version>
-        </dependency>
-
-    </dependencies>
-
-    <pluginRepositories>
-        <pluginRepository>
-            <id>nexus</id>
-            <name>nexus-snapshot-repository</name>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-            <snapshots>
-                <enabled>true</enabled>
-                <updatePolicy>always</updatePolicy>
-            </snapshots>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-        </pluginRepository>
-    </pluginRepositories>
-
-    <build>
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-                <filtering>true</filtering>
-                <excludes>
-                    <exclude>css/*.scss</exclude>
-                </excludes>
-            </resource>
-        </resources>
-
-        <plugins>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.13.0</version>
-                <configuration>
-                    <source>21</source>
-                    <target>21</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
-                    <encoding>UTF-8</encoding>
-                    <annotationProcessorPaths>
-                        <path>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                            <version>${lombok.version}</version>
-                        </path>
-                    </annotationProcessorPaths>
-                </configuration>
-            </plugin>
-
-            <!-- https://github.com/HebiRobotics/sass-cli-maven-plugin -->
-            <plugin>
-                <groupId>us.hebi.sass</groupId>
-                <artifactId>sass-cli-maven-plugin</artifactId>
-                <version>1.0.3</version>
-                <configuration>
-                    <sassVersion>1.78.0</sassVersion>
-                    <args> <!-- Any argument that should be forwarded to the sass cli -->
-                        <arg>${cssSrcPath}/root.scss:${cssTargetPath}/root.css</arg>
-                        <arg>${cssSrcPath}/root-view.scss:${cssTargetPath}/root-view.css</arg>
-                        <arg>${cssSrcPath}/main-view.scss:${cssTargetPath}/main-view.css</arg>
-                        <arg>${cssSrcPath}/setup-view.scss:${cssTargetPath}/setup-view.css</arg>
-                        <arg>${cssSrcPath}/about-view.scss:${cssTargetPath}/about-view.css</arg>
-                        <arg>${cssSrcPath}/admin-panel.scss:${cssTargetPath}/admin-panel.css</arg>
-                        <arg>--no-source-map</arg>
-                    </args>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>sass-exec</id>
-                        <phase>generate-resources</phase>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <plugin>
+            <!-- javafx -->
+            <dependency>
                 <groupId>org.openjfx</groupId>
-                <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.8</version>
-                <configuration>
-                    <stripDebug>true</stripDebug>
-                    <compress>2</compress>
-                    <noHeaderFiles>true</noHeaderFiles>
-                    <noManPages>true</noManPages>
-                    <launcher>alistgui</launcher>
-                    <jlinkImageName>app</jlinkImageName>
-                    <jlinkZipName>app</jlinkZipName>
-                    <mainClass>cn.octopusyan.alistgui/${exec.mainClass}</mainClass>
-                </configuration>
-                <executions>
-                    <execution>
-                        <!-- Default configuration for running with: mvn clean javafx:run -->
-                        <id>default-cli</id>
-                        <configuration>
-                            <stripDebug>true</stripDebug>
-                            <compress>2</compress>
-                            <noHeaderFiles>true</noHeaderFiles>
-                            <noManPages>true</noManPages>
-                            <launcher>alist-gui</launcher>
-                            <jlinkImageName>app</jlinkImageName>
-                            <jlinkZipName>app</jlinkZipName>
-                            <mainClass>cn.octopusyan.alistgui/${exec.mainClass}</mainClass>
-                            <options>
-                                <option>--enable-preview</option>
-<!--                                <option>-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005</option>-->
-                            </options>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+                <artifactId>javafx-controls</artifactId>
+                <version>${javafx.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-fxml</artifactId>
+                <version>${javafx.version}</version>
+            </dependency>
 
-            <!-- https://github.com/fvarrui/JavaPackager -->
-            <plugin>
-                <groupId>io.github.fvarrui</groupId>
-                <artifactId>javapackager</artifactId>
-                <version>1.7.7-SNAPSHOT</version>
-                <configuration>
-                    <mainClass>${exec.mainClass}</mainClass>
-                    <bundleJre>true</bundleJre>
-                    <generateInstaller>false</generateInstaller>
-                    <copyDependencies>true</copyDependencies>
-                    <assetsDir>${project.basedir}/src/main/resources/assets</assetsDir>
-                    <vmArgs>
-                        <arg>--enable-preview</arg>
-                        <arg>-Xmx100m</arg>
-                    </vmArgs>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>windows</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>package</goal>
-                        </goals>
-                        <configuration>
-                            <platform>windows</platform>
-                            <zipballName>${project.name}-windows</zipballName>
-                            <createZipball>true</createZipball>
-                            <winConfig>
-                                <headerType>gui</headerType>
-                                <generateMsi>false</generateMsi>
-                            </winConfig>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>windows-nojre</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>package</goal>
-                        </goals>
-                        <configuration>
-                            <zipballName>${project.name}-windows-nojre</zipballName>
-                            <platform>windows</platform>
-                            <createZipball>true</createZipball>
-                            <bundleJre>false</bundleJre>
-                            <winConfig>
-                                <headerType>gui</headerType>
-                                <generateMsi>false</generateMsi>
-                            </winConfig>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
+            <!-- https://mkpaz.github.io/atlantafx/ -->
+            <dependency>
+                <groupId>io.github.mkpaz</groupId>
+                <artifactId>atlantafx-base</artifactId>
+                <version>2.0.1</version>
+            </dependency>
+
+            <!-- slf4j -->
+            <!-- https://slf4j.org/manual.html -->
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId>
+                <version>${logback.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-core</artifactId>
+                <version>${logback.version}</version>
+            </dependency>
+
+            <!-- common -->
+            <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${common-lang3.version}</version>
+            </dependency>
+            <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-exec -->
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-exec</artifactId>
+                <version>${common-exec.version}</version>
+            </dependency>
+
+            <!-- hutool -->
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-core</artifactId>
+                <version>${hutool.version}</version>
+            </dependency>
+
+            <!-- lombok -->
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
+            </dependency>
+
+            <!-- jackson -->
+            <dependency>
+                <groupId>com.fasterxml.jackson.dataformat</groupId>
+                <artifactId>jackson-dataformat-yaml</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+
+            <!-- https://kordamp.org/ikonli/ -->
+            <dependency>
+                <groupId>org.kordamp.ikonli</groupId>
+                <artifactId>ikonli-javafx</artifactId>
+                <version>${ikonli.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.kordamp.ikonli</groupId>
+                <artifactId>ikonli-fontawesome-pack</artifactId>
+                <version>${ikonli.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.gluonhq</groupId>
+                <artifactId>emoji</artifactId>
+                <version>${gluonhq-emoji.version}</version>
+            </dependency>
+
+        </dependencies>
+    </dependencyManagement>
 </project>
